--- a/CU.html
+++ b/CU.html
@@ -214,58 +214,44 @@
 				</div>
 
 
-				<div class="block twocol">
+				<div class="block threecol">
 
-					<div class="twocol-text1">
+					<div class="threecol-text1">
 						<div class = "bignumber">
-							. 1
+							. 3
 						</div>
-						<em>Navigation difficulty</em>
-						<p>In order to resolve the problem of students getting lost, we developed a map navigation function for use in the airport. 
-							Students could find out where to meet the bus and when the bus would depart. 
-							We coordinated our volunteers to receive the newly arrived students outside the airport and helped them carry their luggage.
+						<em>Feeling of nervous</em>
+						<p>To ease the anxiety of new students and help them find us easily, we developed a contact function. 
+							The causes of anxiety are often helplessness and loneliness, and our hope was to provide emotional 
+							and mental support through available contacts ready to help the newly arrived students.
 						</p>
 					</div>
 
-					<div class="twocol-text2">
+					<div class="threecol-text2">
 						<div class = "bignumber">
-							. 2
+							. 4
 						</div>
-						<em>Burdensome luggage</em>
-						<p>Because international students have two or more bulky luggage items, 
-							I make the pages jump off as little as possible, so that users do not need to operate 
-							their phone frequently. In addition, considering the user scenario that students may not 
-							have two hands to interact with the app, I made the app one hand-operation friendly.
+						<em>Parent's concern</em>
+						<p>In addition to new students, we also considered the parents of these students.  Most of the children in China are only children,
+							 and parents worry when their children go abroad. Therefore, on the completion page of the service, we developed a sharing function 
+							 so that the new students could use their own One-click itinerary sharing with family and friends
 						</p>
 					</div>
 
-					<div class="twocol-img1">
-						<img src="CU/F1.jpg" alt="Funtion1">
+					<div class="threecol-img1">
+						<img src="CU/F3.1.png" alt="Funtion3.1">
 					</div>
-					<div class="twocol-img2">
-						<img src="CU/F2.1.png" alt="Funtion2.1">
+					<div class="threecol-v1">
+						<video autoplay muted controls loop src="CU/F3.2.mp4" alt="Funtion4.1">
 					</div>
-					<div class="twocol-img3">
-						<img src="CU/F2.2.png" alt="Funtion2.2">
+					<div class="threecol-img2">
+						<img src="CU/4.1.png" alt="Funtion3.2">
 					</div>
-
+					<div class="threecol-v2">
+						<video autoplay muted controls loop src="CU/F4.2.mov" alt="Funtion4.2">
+					</div>
 				</div>
 
-
-					</div>
-					
-
-					<h3>Feeling of nervous</h3>
-					<p>To ease the anxiety of new students and help them find us easily, we developed a contact function. The causes of anxiety are often helplessness and loneliness, and our hope was to provide emotional and mental support through available contacts ready to help the newly arrived students.</p>
-					<img>
-					<h3>Care for students as well as their parents</h3>
-					<p>In addition to new students, we also considered the parents of these students.  Most of the children in China are only children, and parents worry when their children go abroad. Therefore, on the completion page of the service, we developed a sharing function so that the new students could use their own One-click itinerary sharing with family and friends</p>
-					<img>
-				</div>
-
-				<div class="block">
-
-				</div>
 
 				<div class="block">
 					<h2>Challenges</h2>
