12 columns system updated, bug fixed

--- a/CU.html
+++ b/CU.html
@@ -242,10 +242,10 @@
 						<img src="CU/F3.1.png" alt="Funtion3.1">
 					</div>
 					<div class="threecol-v1">
-						<video autoplay muted controls loop src="CU/F3.2.mp4" alt="Funtion4.1">
+						<video autoplay muted controls loop src="CU/F3.2.mp4" alt="Funtion3.2">
 					</div>
 					<div class="threecol-img2">
-						<img src="CU/4.1.png" alt="Funtion3.2">
+						<img src="CU/F4.1.png" alt="Funtion4.1">
 					</div>
 					<div class="threecol-v2">
 						<video autoplay muted controls loop src="CU/F4.2.mov" alt="Funtion4.2">
