function work in 12 column system

--- a/CU.html
+++ b/CU.html
@@ -176,9 +176,9 @@
 					</ol>
 				</div>
 
-				<div class="block twocol">
+				<div class="block col12 ">
 
-					<div class="twocol-text1">
+					<div class="col12-text-left f1-text">
 						<div class = "bignumber">
 							. 1
 						</div>
@@ -189,7 +189,7 @@
 						</p>
 					</div>
 
-					<div class="twocol-text2">
+					<div class="col12-text-left f2-text">
 						<div class = "bignumber">
 							. 2
 						</div>
@@ -201,22 +201,23 @@
 						</p>
 					</div>
 
-					<div class="twocol-img1">
+					<div class="f1-img1">
 						<img src="CU/F1.jpg" alt="Funtion1">
 					</div>
-					<div class="twocol-img2">
+				
+					<div class="f2-img1">
 						<img src="CU/F2.1.png" alt="Funtion2.1">
 					</div>
-					<div class="twocol-img3">
+					<div class="f2-img2">
 						<img src="CU/F2.2.png" alt="Funtion2.2">
 					</div>
 
 				</div>
 
 
-				<div class="block threecol">
+				<div class="block col12 r2">
 
-					<div class="threecol-text1">
+					<div class="col12-text-left f3-text">
 						<div class = "bignumber">
 							. 3
 						</div>
@@ -227,7 +228,7 @@
 						</p>
 					</div>
 
-					<div class="threecol-text2">
+					<div class="col12-text-left f4-text">
 						<div class = "bignumber">
 							. 4
 						</div>
@@ -238,16 +239,16 @@
 						</p>
 					</div>
 
-					<div class="threecol-img1">
+					<div class="f3-img">
 						<img src="CU/F3.1.png" alt="Funtion3.1">
 					</div>
-					<div class="threecol-v1">
+					<div class="f3-v">
 						<video autoplay muted controls loop src="CU/F3.2.mp4" alt="Funtion3.2">
 					</div>
-					<div class="threecol-img2">
+					<div class="f4-img">
 						<img src="CU/F4.1.png" alt="Funtion4.1">
 					</div>
-					<div class="threecol-v2">
+					<div class="f4-v">
 						<video autoplay muted controls loop src="CU/F4.2.mov" alt="Funtion4.2">
 					</div>
 				</div>
