CU almost finish

--- a/CU.html
+++ b/CU.html
@@ -87,8 +87,8 @@
 				<ul>
 					<li class="nav_label">About Me</li>
 					<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
-					<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing" target="_blank">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" target="_blank">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
 
 					<li class="nav_label">Past Work</li>
 					<li class="side_link"><a  class="current" href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
@@ -256,13 +256,12 @@
 
 				<div class="block">
 					<h2>Challenges</h2>
-					<h2>1</h2>
-					<h2>Integrate business into human-centered design</h2>
+					<h3>1. Integrate business into human-centered design</h3>
 					<p>Newly arrived students often need to stay in a hotel for a few days when they first arrive at the school because college or school dormitories do not offer immediate check-in upon arrival. These students also need to get cell phone access and bank services in new countries. As a product manager, I hope to integrate commercial interests and human-centered design. I proposed a one-stop service to integrate the hotel service in cooperation with local hotels and the card-issuing service in cooperation with AT&T and Chase on Banner. This not only improves the conversion rate of users, but also allows our team to get more sponsorships. All of this also helps the freshmen get up to speed in adapting to a new way of life.</p>
-					<img src="CU/3_services.png" alt="de">
-					<h2>2</h2>
-					<h2>Server Latency</h2>
+					<img src="CU/C1.png" alt="Challenge1">
+					<h3>2. Server Latency</h3>
 					<p>under-construction</p>
+					<img src="CU/C2.png" height = 300px alt="Challenge2">
 					<img>
 
 				</div>
@@ -289,11 +288,11 @@
 
 				<div class="block">
 					<h2>Posts about the project</h2>
-					<a href="https://www.chineseunion.org/%e6%8e%a5%e6%9c%ba%e6%9c%8d%e5%8a%a1-2/">Peace of Mind Programme: Pick-up service</a>
+					<a href="https://www.chineseunion.org/%e6%8e%a5%e6%9c%ba%e6%9c%8d%e5%8a%a1-2/" target="_blank">Peace of Mind Programme: Pick-up service</a>
 					<br>
-					<a href="https://mp.weixin.qq.com/s/f9bMJGTllWqdJld_r8s1Kg">全新VITA会员计划及微信小程序 震撼发布</a>
+					<a href="https://mp.weixin.qq.com/s/f9bMJGTllWqdJld_r8s1Kg" target="_blank">全新VITA会员计划及微信小程序 震撼发布</a>
 					<br>
-					<a href="https://mp.weixin.qq.com/s/NGSRut3zqZQtKVMVIWzYVA">CU | 中秋接机,带你回家</a>
+					<a href="https://mp.weixin.qq.com/s/NGSRut3zqZQtKVMVIWzYVA" target="_blank">CU | 中秋接机,带你回家</a>
 				</div>
 			</div>
 
