--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 					<ul>
 						<li class="nav_label">About Me</li>
 						<li class="side_link"><a  class="current" href = "index.html">故事&nbsp;My Story</a></li>
-						<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-						<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
+						<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing" target="_blank">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
+						<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" target="_blank">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
 
 						<li class="nav_label">Past Work</li>
 						<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
