skip to main content bug fixed

--- a/CU.html
+++ b/CU.html
@@ -18,17 +18,6 @@
 		<link rel="stylesheet" href="css/balloon.min.css">
 		<link rel="stylesheet" href="css/devices.min.css" type="text/css">
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L06V1TJE9T"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-L06V1TJE9T');
-		</script>
 
 		<title>Pick-up Service</title>
 	</head>
@@ -40,7 +29,7 @@
 		<div class="mask mr"></div>
 		
 
-		<div class="main">
+		<div>
 			<a class="skip-to-content-link" href="#main">
 				Skip to content
 			</a>
@@ -104,7 +93,7 @@
 					
 		</div>
 
-		<main>
+		<main id="main">
 			<div class="project">
 				<!-- <h1>CU Vita Pick-up Service</h1> -->
 				<div class = "twotext block">
