--- a/index.html
+++ b/index.html
@@ -18,14 +18,6 @@
 		<link rel="stylesheet" href="css/balloon.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L06V1TJE9T"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-L06V1TJE9T');
-		</script>
 
 		<title>Claudius' Portfolio</title>
 	</head>
@@ -37,7 +29,7 @@
 		<div class="mask mr"></div>
 
 		
-		<main>
+
 			<a class="skip-to-content-link" href="#main">
 				Skip to content!
 			</a>
@@ -73,34 +65,34 @@
 
 
 
-			<header class="header">
-				<div class="photo">
-					<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
-						<img src="imgs/My_photo.png" alt="Me">
-					</a>
-				</div>
-				<div class="My_Intro">
-					<p>I am Chuxuan(Claudius) Ma</p>
-					<p>a multidisciplinary designer.</p>
-				</div>
-				<div class="nav">
-					<ul>
-						<li class="nav_label">About Me</li>
-						<li class="side_link"><a  class="current" href = "index.html">故事&nbsp;My Story</a></li>
-						<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing" target="_blank">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-						<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" target="_blank">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
+		<header class="header">
+			<div class="photo">
+				<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
+					<img src="imgs/My_photo.png" alt="Me">
+				</a>
+			</div>
+			<div class="My_Intro">
+				<p>I am Chuxuan(Claudius) Ma</p>
+				<p>a multidisciplinary designer.</p>
+			</div>
+			<div class="nav">
+				<ul>
+					<li class="nav_label">About Me</li>
+					<li class="side_link"><a  class="current" href = "index.html">故事&nbsp;My Story</a></li>
+					<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing" target="_blank">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" >领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
 
-						<li class="nav_label">Past Work</li>
-						<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
-						<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
-						<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
-						<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
-					</ul>
-				</div>	
-			</header>
+					<li class="nav_label">Past Work</li>
+					<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
+					<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
+					<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
+					<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
+				</ul>
+			</div>	
+		</header>
 
 
-
+		<main id="main">
 			<div class="overview">
 
 				<h1>My Story</h1>
