--- a/Badge.html
+++ b/Badge.html
@@ -16,19 +16,10 @@
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="css/balloon.min.css">
+		<link rel="stylesheet" href="css/devices.min.css" type="text/css">
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-		
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L06V1TJE9T"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-L06V1TJE9T');
-		</script>
 
-		<title>Winter Olympic</title>
+		<title>Winter Olympic Badge</title>
 	</head>
 
 	<body>
@@ -37,107 +28,70 @@
 		<div class="mask ml"></div>
 		<div class="mask mr"></div>
 		
-		<main>
-			<div class="main">
 
-				<a class="skip-to-content-link" href="#main">
-					Skip to content
-				</a>
-				<!-- mobile hamburgerbar  -->
-				<div class="topnav">
-					<a  class="active" href="index.html">Ma</a>
-					<!-- Navigation links (hidden by default) -->
-					<div id="myLinks">
+		<div>
+			<a class="skip-to-content-link" href="#main">
+				Skip to content
+			</a>
+			<!-- mobile hamburgerbar  -->
+			<div class="topnav">
+				<a  class="active" href="index.html">Ma</a>
+				<!-- Navigation links (hidden by default) -->
+				<div id="myLinks">
 					<a href="TCL.html">Smart TV</a>
 					<a href="Jewelry.html">Jewelry </a>
 					<a href="Badge.html">Badge </a>
 					<a href="CU.html">Pickup</a>
-					</div>
-					<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-					<a class="icon" onclick="myFunction()">
+				</div>
+				<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+				<a class="icon" onclick="myFunction()">
 					<i class="fa fa-bars"></i>
-					</a>
-				</div>
-	<script>
-		function myFunction() {
-			var x = document.getElementById("myLinks");
-			if (x.style.display === "block") {
-				x.style.display = "none";
-				} 
-			else {
-				x.style.display = "block";
-				}
-		}
-	</script>
+				</a>
+			</div>
+		</div>
+		<script>
+			function myFunction() {
+				var x = document.getElementById("myLinks");
+				if (x.style.display === "block") {
+					x.style.display = "none";
+					} 
+				else {
+					x.style.display = "block";
+					}
+			}
+		</script>
 
 
+		<header class="header">
+			<div class="photo">
+				<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
+					<img src="imgs/My_photo.png" alt="Me">
+				</a>
+			</div>
+			<div class="My_Intro">
+				<p>I am Chuxuan(Claudius) Ma</p>
+				<p>a multidisciplinary designer.</p>
+			</div>
+			<div class="nav">
+				<ul>
+					<li class="nav_label">About Me</li>
+					<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
+					<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing" target="_blank">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" target="_blank">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
 
-				<header class="header">
-					<div class="inner">
-						<div class="photo">
-							<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
-								<img src="imgs/My_photo.png" alt="Me">
-							</a>
-						</div>
-						<div class="My_Intro">
-							I am Chuxuan(Claudius) Ma, a multidisciplinary designer.
-						</div>
-						<div class="nav">
-							<ul>
-								<li class="nav_label">About Me</li>
-								<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
-								<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-								<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
-		
-								<li class="nav_label">Past Work</li>
-								<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pick-up Service</a></li>
-								<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
-								<li class="side_link"><a  class="current" href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
-								<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
-							</ul>
-		
-						</div>
-					</div>
-				</header>
-				<div id = "main" class="section content">
-					<div class="inner">
-						<article class="item page-item">
-							<div class="inner">
-								<div class="item-main">
-									<div class="item-desc text">
-										<h1>Winter Olympic Badge</h1>
-										<div class="summary overall">
-											<div class="inner">
-												<div class="summary-desc">
-													<h2>Context</h2>
-													<div class= "word_word">
-														<p>Pictographs evolved from pictorial characters, unlike phonetic text pictographs which are ideographic. I reversed the ideographic text with the original graphic, and then reorganized the graphic with the current intention, thus completing the fusion of ancient Chinese characters with modern design.</p>
-														<br>
-														<p>This is very obvious in the design of Beijing. Urban layouts are not the same in every country, and since ancient times Beijing has been a "井" layout. “Road” becomes an element in Beijing, and I first made "北京(Beijing)" back to a graphic and then integrated the road element into it. This one figure and this new figure form a new ideogram. Similarly, I incorporated chopsticks into the "家(family)” and red into “庆(celebration)”.</p>	
-													</div>
-												</div>
-											</div>
-										</div>
-										<div class="summary overall">
-											<div class="inner">
-												<div class="summary-desc">
-													<h2>Final Design</h2>
-													<div class= "img1">
-														<img src="imgs/Badge_prodcut_picture.jpg" alt="Badges_pic">
-														<img src="imgs/Badge_product_picture_on_bag.jpeg" alt="BadgesOnMyBag">
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</article>
-					</div>
-				</div>
-
-
+					<li class="nav_label">Past Work</li>
+					<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
+					<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
+					<li class="side_link"><a  class="current" href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
+					<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
+				</ul>
 			</div>	
+		</header>
+
+		<main id="main">
+			<div class="project">
+				<!-- <h1>CU Vita Pick-up Service</h1> -->
+				<div class = "twotext block">
 		</main>
 		<footer class="footer">
 			<div class="inner-footer">
