--- a/Jewelry.html
+++ b/Jewelry.html
@@ -16,20 +16,10 @@
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="css/balloon.min.css">
-
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L06V1TJE9T"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-L06V1TJE9T');
-		</script>
+		<link rel="stylesheet" href="css/devices.min.css" type="text/css">
 
 
-		<title>Jewelry</title>
+		<title>Chow Tai Fook Jewelry</title>
 	</head>
 
 	<body>
@@ -38,148 +28,71 @@
 		<div class="mask ml"></div>
 		<div class="mask mr"></div>
 		
-		<main>
-			<div class="main">
-				<a class="skip-to-content-link" href="#main">
-					Skip to content
-				</a>
-				<!-- mobile hamburgerbar  -->
-				<div class="topnav">
-					<a  class="active" href="index.html">Ma</a>
-					<!-- Navigation links (hidden by default) -->
-					<div id="myLinks">
+
+		<div>
+			<a class="skip-to-content-link" href="#main">
+				Skip to content
+			</a>
+			<!-- mobile hamburgerbar  -->
+			<div class="topnav">
+				<a  class="active" href="index.html">Ma</a>
+				<!-- Navigation links (hidden by default) -->
+				<div id="myLinks">
 					<a href="TCL.html">Smart TV</a>
 					<a href="Jewelry.html">Jewelry </a>
 					<a href="Badge.html">Badge </a>
 					<a href="CU.html">Pickup</a>
-					</div>
-					<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-					<a class="icon" onclick="myFunction()">
+				</div>
+				<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+				<a class="icon" onclick="myFunction()">
 					<i class="fa fa-bars"></i>
-					</a>
-				</div>
-	<script>
-		function myFunction() {
-			var x = document.getElementById("myLinks");
-			if (x.style.display === "block") {
-				x.style.display = "none";
-				} 
-			else {
-				x.style.display = "block";
-				}
-		}
-	</script>
-
-
-
-
-
-				<header class="header">
-					<div class="inner">
-						<div class="photo">
-							<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
-								<img src="imgs/My_photo.png" alt="Me">
-							</a>
-						</div>
-						<div class="My_Intro">
-							I am Chuxuan(Claudius) Ma, a multidisciplinary designer.
-						</div>
-						<div class="nav">
-							<ul>
-								<li class="nav_label">About Me</li>
-								<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
-								<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-								<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
-		
-								<li class="nav_label">Past Work</li>
-								<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pick-up Service</a></li>
-								<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
-								<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
-								<li class="side_link"><a  class="current" href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
-							</ul>
-		
-						</div>
-					</div>
-				</header>
-				<div id = "main" class="section content">
-					<div class="inner">
-						<article class="item page-item">
-							<div class="inner">
-								<div class="item-main">
-									<div class="item-desc text">
-										<h1>Jewelry Design</h1>
-										<div class="summary overall">
-											<div class="inner">
-												<div class="summary-desc">
-													<h2>Context</h2>
-													<div class= "word_word">
-														<p>In the long history of China, the ancient Chinese contributed many innovations to the world, such as papermaking, gunpowder, and porcelain. But now, Chinese products are always linked with “fake” . It is my passion and duty to alter this history and do something to change the stereotype about our community. This is the reason I started my inquiry with the first question: What is Chinese design?</p>
-													</div>
-												</div>
-											</div>
-										</div>
-		
-										<div class="summary overall">
-											<div class="inner">
-												<div class="summary-desc">
-													<h2>Elegance</h2>
-													<div class= "word_word">
-														<p>Elegance is one of my works in The Heritage Series of Chow Tai Fook. The Heritage Series is mainly based on the totem pattern in the Tang Dynasty in China, and uses the symbolic language to convey subjective feelings. Elegance originated from The Classic of Poetry, also Shijing. The craft in the middle is called Wu, which embodies reputation. You can see four big characters in the middle of Wu. They are small seal scripts. Our ancestors used this proverb to describe elegant women. The Wu is surrounded by Lotus and Phoenix, which are the symbols of nobleness and purity. I combine the symbolic language as a panegyric to women.</p>
-													</div>
-												</div>
-											</div>
-										</div>
-		
-										<div class="summary overall">
-											<div class="inner">
-												<div class="summary-desc">
-													<h2>Design</h2>
-													<div class= "img1">
-														<img src="imgs/tp2.png" alt="Wireframe">
-													</div>
-												</div>
-											</div>
-										</div>
-		
-										<div class="summary overall">
-											<div class="inner">
-												<div class="summary-desc">
-													<h2>Twirling</h2>
-													<div class= "word_word">
-														<p>Twirling is also one of my works in The Heritage Series of Chow Tai Fook. Inspiration originated from the parrots and flowers in the Tang Dynasty. In the context of ancient China, parrots often come together in pairs, and the meaning of twirling is to wish the couple's love forever. Telling stories with symbols of arts and crafts is a form of Chinese design, and I like how crafts can share a story without words to people.</p>
-													</div>
-												</div>
-											</div>
-										</div>
-		
-										<div class="summary overall">
-											<div class="inner">
-												<div class="summary-desc">
-													<h2>Design</h2>
-													<div class= "img1">
-														<img src="imgs/tp1.png" alt="Wireframe">
-													</div>
-												</div>
-											</div>
-										</div>
-		
-		
-									</div>
-								</div>
-							</div>
-						</article>
-					</div>
-				</div>
-			
-
-
-
-
+				</a>
 			</div>
+		</div>
+		<script>
+			function myFunction() {
+				var x = document.getElementById("myLinks");
+				if (x.style.display === "block") {
+					x.style.display = "none";
+					} 
+				else {
+					x.style.display = "block";
+					}
+			}
+		</script>
+
+
+		<header class="header">
+			<div class="photo">
+				<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
+					<img src="imgs/My_photo.png" alt="Me">
+				</a>
+			</div>
+			<div class="My_Intro">
+				<p>I am Chuxuan(Claudius) Ma</p>
+				<p>a multidisciplinary designer.</p>
+			</div>
+			<div class="nav">
+				<ul>
+					<li class="nav_label">About Me</li>
+					<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
+					<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing" target="_blank">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" target="_blank">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
+
+					<li class="nav_label">Past Work</li>
+					<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
+					<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
+					<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
+					<li class="side_link"><a  class="current" href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
+				</ul>
+			</div>	
+		</header>
+
+		<main id="main">
+			<div class="project">
+				<!-- <h1>CU Vita Pick-up Service</h1> -->
+				<div class = "twotext block">
 		</main>
-
-
-
 		<footer class="footer">
 			<div class="inner-footer">
 				@2022 Chuxuan(Claudius) Ma
