--- a/TCL.html
+++ b/TCL.html
@@ -16,162 +16,87 @@
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="css/balloon.min.css">
-
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L06V1TJE9T"></script>
-		<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
-		gtag('js', new Date());
-		gtag('config', 'G-L06V1TJE9T');
-		</script>
+		<link rel="stylesheet" href="css/devices.min.css" type="text/css">
 
 
-		<title>Smart TV</title>
+		<title>TCL Smart TV</title>
 	</head>
 
 	<body>
-	</body>
-	<div class="mask mt"></div>
-	<div class="mask mb"></div>
-	<div class="mask ml"></div>
-	<div class="mask mr"></div>
-	
-	<main>
-		<div class="main">
+		<div class="mask mt"></div>
+		<div class="mask mb"></div>
+		<div class="mask ml"></div>
+		<div class="mask mr"></div>
+		
+
+		<div>
 			<a class="skip-to-content-link" href="#main">
 				Skip to content
-			  </a>
+			</a>
 			<!-- mobile hamburgerbar  -->
 			<div class="topnav">
 				<a  class="active" href="index.html">Ma</a>
 				<!-- Navigation links (hidden by default) -->
 				<div id="myLinks">
-				  <a href="TCL.html">Smart TV</a>
-				  <a href="Jewelry.html">Jewelry </a>
-				  <a href="Badge.html">Badge </a>
-				  <a href="CU.html">Pickup</a>
+					<a href="TCL.html">Smart TV</a>
+					<a href="Jewelry.html">Jewelry </a>
+					<a href="Badge.html">Badge </a>
+					<a href="CU.html">Pickup</a>
 				</div>
 				<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
 				<a class="icon" onclick="myFunction()">
-				  <i class="fa fa-bars"></i>
+					<i class="fa fa-bars"></i>
 				</a>
-			  </div>
-<script>
-	function myFunction() {
-		var x = document.getElementById("myLinks");
-  		if (x.style.display === "block") {
-    		x.style.display = "none";
-  			} 
-  		else {
-    		x.style.display = "block";
- 			 }
-	}
-</script>
-
-
-
-
-			<header class="header">
-				<div class="inner">
-					<div class="photo">
-						<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
-							<img src="imgs/My_photo.png" alt="Me">
-						</a>
-					</div>
-					<div class="My_Intro">
-						I am Chuxuan(Claudius) Ma, a multidisciplinary designer.
-					</div>
-					<div class="nav">
-						<ul>
-							<li class="nav_label">About Me</li>
-							<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
-							<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-							<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
-	
-							<li class="nav_label">Past Work</li>
-							<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pick-up Service</a></li>
-							<li class="side_link"><a  class="current" href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
-							<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
-							<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
-						</ul>
-	
-					</div>
-				</div>
-			</header>
-			<div id = "main" class="section content">
-				<div class="inner">
-					<article class="item page-item">
-						<div class="inner">
-							<div class="item-main">
-								<div class="item-desc text">
-									<h1>TCL Smart TV</h1>
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>Context</h2>
-												<div class= "word_word">
-													<p>In the process of exploration, I gradually discovered that the symbols of ancient culture were based on feudal monarchy, and their design objects were often aimed at the royal family. Ancient Chinese designs should not be used to form the symbolic style of modern China. Modern China must discover its own design for its own era. As the design should represent the current challenges that the modern world faces, I start to further discover modern design.</p>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>Project Brief</h2>
-												<div class= "word_word">
-													<p>In 2019, IoT is a term that has been pushed to the forefront of technology. Smart homes are a new field for everyone. Its design framework is vague and there is more room to expand and explore. While designing at TCL Industrial design center, my team and I were aiming to make product upgrades for C series Smart TVs. Our design goal was to make Smart TVs more valued.</p>
-												</div>
-											</div>
-										</div>
-									</div>
-							
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>Design</h2>
-												<div class= "img1">
-													<img src="imgs/Smart-TV.png" alt="TV Design">
-												</div>
-											</div>
-										</div>
-									</div>
-	
-									<div class="summary overall">
-										<div class="inner">
-											<div class="summary-desc">
-												<h2>Design Description</h2>
-												<div class= "word_word">
-													<p>As a container-like object, TV does not directly interact with people. People interact with the media produced for TV. Therefore, the expression of "value" may focus on the interaction between two objects, between objects and their environment. We used the Lotus Blossom Ideation Process and discovered some keywords of “value” and I mainly focused on three of them.</p>
-													<p>
-														1. Soft: make the TV softer through the use of fabrics and wooden materials.<br>
-														2. Airy: Make the TV look less heavy through the use of acrylic materials in the base.<br>
-														3. Color: Choose neutral colors and colors suitable for the environment, so the TV blends into the environment.<br>
-													</p>
-												</div>
-											</div>
-										</div>
-									</div>
-	
-								</div>
-							</div>
-						</div>
-					</article>
-				</div>
 			</div>
+		</div>
+		<script>
+			function myFunction() {
+				var x = document.getElementById("myLinks");
+				if (x.style.display === "block") {
+					x.style.display = "none";
+					} 
+				else {
+					x.style.display = "block";
+					}
+			}
+		</script>
 
 
-		</div>
-	</main>
-	<footer class="footer">
-		<div class="inner-footer">
-			@2022 Chuxuan(Claudius) Ma
-		</div>
-	</footer>
-	<
+		<header class="header">
+			<div class="photo">
+				<a href="index.html" aria-label=" Keep Smiling Claudius 😃 " data-balloon-pos="down" >
+					<img src="imgs/My_photo.png" alt="Me">
+				</a>
+			</div>
+			<div class="My_Intro">
+				<p>I am Chuxuan(Claudius) Ma</p>
+				<p>a multidisciplinary designer.</p>
+			</div>
+			<div class="nav">
+				<ul>
+					<li class="nav_label">About Me</li>
+					<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
+					<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing" target="_blank">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" target="_blank">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
+
+					<li class="nav_label">Past Work</li>
+					<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
+					<li class="side_link"><a  class="current" href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
+					<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
+					<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
+				</ul>
+			</div>	
+		</header>
+
+		<main id="main">
+			<div class="project">
+				<!-- <h1>CU Vita Pick-up Service</h1> -->
+				<div class = "twotext block">
+		</main>
+		<footer class="footer">
+			<div class="inner-footer">
+				@2022 Chuxuan(Claudius) Ma
+			</div>
+		</footer>
+	</body>
 </html>
-
-
