--- a/Badge.html
+++ b/Badge.html
@@ -90,8 +90,19 @@
 
 		<main id="main">
 			<div class="project">
-				<!-- <h1>CU Vita Pick-up Service</h1> -->
-				<div class = "twotext block">
+				<div class = "block">
+					<img src="imgs/Badge1.png">
+					<p>
+						Pictographs evolved from pictorial characters, unlike phonetic text pictographs which are ideographic.
+						<br>
+						I reversed the ideographic text with the original graphic, and then reorganized the graphic with the current intention, thus completing the fusion of ancient Chinese characters with modern design.
+						<br>
+						This is very obvious in the design of Beijing. Urban layouts are not the same in every country, and since ancient times Beijing has been a "井" layout. “Road” becomes an element in Beijing, and I first made "北京(Beijing)" back to a graphic and then integrated the road element into it. This one figure and this new figure form a new ideogram. Similarly, I incorporated chopsticks into the "家(family)” and red into “庆(celebration)”.
+
+					</p>
+
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="inner-footer">
