--- a/TCL.html
+++ b/TCL.html
@@ -90,8 +90,25 @@
 
 		<main id="main">
 			<div class="project">
-				<!-- <h1>CU Vita Pick-up Service</h1> -->
-				<div class = "twotext block">
+				<div class = "block col12">
+					<div class = "jew-img">
+						<img src="imgs/Smart-TV.png">
+					</div>
+					<div class="col12-text-left jew-text">
+						<div class = "bignumber">
+						
+						</div>
+						<em>Smart-TV </em>
+						<p>
+							In 2019, IoT is a term that has been pushed to the forefront of technology. Smart homes are a new field for everyone. Its design framework is vague and there is more room to expand and explore. While designing at TCL Industrial design center, my team and I were aiming to make product upgrades for C series Smart TVs. Our design goal was to make Smart TVs more valued.
+
+							As a container-like object, TV does not directly interact with people. People interact with the media produced for TV. Therefore, the expression of "value" may focus on the interaction between two objects, between objects and their environment.
+							We used the Lotus Blossom Ideation Process and discovered some keywords of “value”
+	
+						</p>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="inner-footer">
