huge update, mvp ready

--- a/class.html
+++ b/class.html
@@ -16,10 +16,10 @@
 
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="css/balloon.min.css">
-		<link rel="stylesheet" href="css/devices.min.css" type="text/css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-		<title>TCL Smart TV</title>
+		<title>Claudius' Portfolio</title>
 	</head>
 
 	<body>
@@ -27,21 +27,22 @@
 		<div class="mask mb"></div>
 		<div class="mask ml"></div>
 		<div class="mask mr"></div>
+
 		
 
-		<div>
 			<a class="skip-to-content-link" href="#main">
-				Skip to content
+				Skip to content!
 			</a>
+				
 			<!-- mobile hamburgerbar  -->
 			<div class="topnav">
 				<a  class="active" href="index.html">Ma</a>
 				<!-- Navigation links (hidden by default) -->
 				<div id="myLinks">
-					<a href="TCL.html">Smart TV</a>
-					<a href="Jewelry.html">Jewelry </a>
-					<a href="Badge.html">Badge </a>
-					<a href="CU.html">Pickup</a>
+				<a href="TCL.html">Smart TV</a>
+				<a href="Jewelry.html">Jewelry </a>
+				<a href="Badge.html">Badge </a>
+				<a href="CU.html">Pickup</a>
 				</div>
 				<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
 				<a class="icon" onclick="myFunction()">
@@ -60,6 +61,8 @@
 					}
 			}
 		</script>
+
+
 
 
 		<header class="header">
@@ -81,42 +84,12 @@
 
 					<li class="nav_label">My Product</li>
 					<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
-					<li class="side_link"><a  href = "class.html" aria-label="UX Design" data-balloon-pos="down-right">Class Search</a></li>
+					<li class="side_link"><a  class="current" href = "class.html" aria-label="UX Design" data-balloon-pos="down-right">Class Search</a></li>
 
 					<li class="nav_label">Internship</li>
-					<li class="side_link"><a  class="current" href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
+					<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
 					<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
 					<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
 				</ul>
 			</div>	
 		</header>
-
-		<main id="main">
-			<div class="project">
-				<div class = "block col12">
-					<div class = "jew-img">
-						<img src="imgs/Smart-TV.png">
-					</div>
-					<div class="col12-text-left jew-text">
-						<div class = "bignumber">
-						
-						</div>
-						<em>Smart-TV </em>
-						<p>
-							In 2019, IoT is a term that has been pushed to the forefront of technology. Smart homes are a new field for everyone. Its design framework is vague and there is more room to expand and explore. While designing at TCL Industrial design center, my team and I were aiming to make product upgrades for C series Smart TVs. Our design goal was to make Smart TVs more valued.
-
-							As a container-like object, TV does not directly interact with people. People interact with the media produced for TV. Therefore, the expression of "value" may focus on the interaction between two objects, between objects and their environment.
-							We used the Lotus Blossom Ideation Process and discovered some keywords of “value”
-	
-						</p>
-					</div>
-				</div>
-			</div>
-		</main>
-		<footer class="footer">
-			<div class="inner-footer">
-				@2022 Chuxuan(Claudius) Ma
-			</div>
-		</footer>
-	</body>
-</html>
