--- a/CU.html
+++ b/CU.html
@@ -77,10 +77,13 @@
 					<li class="nav_label">About Me</li>
 					<li class="side_link"><a  href = "index.html">故事&nbsp;My Story</a></li>
 					<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing" target="_blank">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" target="_blank">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" >领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
 
-					<li class="nav_label">Past Work</li>
+					<li class="nav_label">My Product</li>
 					<li class="side_link"><a  class="current" href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
+					<li class="side_link"><a  href = "class.html" aria-label="UX Design" data-balloon-pos="down-right">Class Search</a></li>
+
+					<li class="nav_label">Internship</li>
 					<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
 					<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
 					<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
