--- a/class.html
+++ b/class.html
@@ -93,3 +93,8 @@
 				</ul>
 			</div>	
 		</header>
+		<main id="main">
+			<div class="project">
+				<img src="imgs/meet.png">
+			</div>
+		</main>
