--- a/CU.html
+++ b/CU.html
@@ -250,10 +250,10 @@
 					<h2>Challenges</h2>
 					<h3>1. Integrate business into human-centered design</h3>
 					<p>Newly arrived students often need to stay in a hotel for a few days when they first arrive at the school because college or school dormitories do not offer immediate check-in upon arrival. These students also need to get cell phone access and bank services in new countries. As a product manager, I hope to integrate commercial interests and human-centered design. I proposed a one-stop service to integrate the hotel service in cooperation with local hotels and the card-issuing service in cooperation with AT&T and Chase on Banner. This not only improves the conversion rate of users, but also allows our team to get more sponsorships. All of this also helps the freshmen get up to speed in adapting to a new way of life.</p>
-					<img src="CU/C1.png" alt="Challenge1">
+					<img src="CU/c1.png" alt="Challenge1">
 					<h3>2. Server Latency</h3>
 					<p>under-construction</p>
-					<img src="CU/C2.png" height = 300px alt="Challenge2">
+					<img src="CU/c2.png" height = 300px alt="Challenge2">
 					<img>
 
 				</div>
