--- a/CU.html
+++ b/CU.html
@@ -235,13 +235,13 @@
 						<img src="CU/F3.1.png" alt="Funtion3.1">
 					</div>
 					<div class="f3-v">
-						<video autoplay muted controls loop src="CU/F3.2.mp4" alt="Funtion3.2">
+						<video autoplay muted controls loop src="CU/F3.2.mp4"></video>
 					</div>
 					<div class="f4-img">
 						<img src="CU/F4.1.png" alt="Funtion4.1">
 					</div>
 					<div class="f4-v">
-						<video autoplay muted controls loop src="CU/F4.2.mov" alt="Funtion4.2">
+						<video autoplay muted controls loop src="CU/F4.2.mov"></video>
 					</div>
 				</div>
 
@@ -253,8 +253,7 @@
 					<img src="CU/c1.png" alt="Challenge1">
 					<h3>2. Server Latency</h3>
 					<p>under-construction</p>
-					<img src="CU/c2.png" height = 300px alt="Challenge2">
-					<img>
+					<img src="CU/c2.png" height = "300px" alt="Challenge2">
 
 				</div>
 
