--- a/Badge.html
+++ b/Badge.html
@@ -95,7 +95,7 @@
 			<div class="project">
 				<div class = "block col12">
 					<div class = "jew-img">
-						<img src="imgs/Badge1.png">
+						<img src="imgs/Badge1.png" alt="badge">
 					</div>
 					<div class="col12-text-left jew-text">
 						<div class = "bignumber">
