--- a/TCL.html
+++ b/TCL.html
@@ -95,7 +95,7 @@
 			<div class="project">
 				<div class = "block col12">
 					<div class = "jew-img">
-						<img src="imgs/Smart-TV.png">
+						<img src="imgs/Smart-TV.png" alt="TCL-TV">
 					</div>
 					<div class="col12-text-left jew-text">
 						<div class = "bignumber">
