little change on intro

--- a/class.html
+++ b/class.html
@@ -72,7 +72,7 @@
 				</a>
 			</div>
 			<div class="My_Intro">
-				<p>I am Chuxuan(Claudius) Ma</p>
+				<p>I'm Chuxuan(Claudius) Ma</p>
 				<p>a multidisciplinary designer.</p>
 			</div>
 			<div class="nav">
