--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 		</main>
 		<footer class="footer">
 			<div class="inner-footer">
-				@2022 Chuxuan(Claudius) Ma
+				@2022 coded by Chuxuan(Claudius) Ma
 			</div>
 		</footer>
 
