--- a/Badge.html
+++ b/Badge.html
@@ -19,6 +19,16 @@
 
 
 		<title>Winter Olympic Badge</title>
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZV26SHH79E"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-ZV26SHH79E');
+		</script>
 	</head>
 
 	<body>
