--- a/class.html
+++ b/class.html
@@ -94,7 +94,9 @@
 			</div>	
 		</header>
 		<main id="main">
+			<a href = "https://claudiusma.notion.site/Plzdontwaitlistme-b4a8756bc0a44dec858178bbe77b09ce">Link</a>
 			<div class="project">
 				<img src="imgs/meet.png">
 			</div>
+			
 		</main>
