--- a/class.html
+++ b/class.html
@@ -94,9 +94,8 @@
 			</div>	
 		</header>
 		<main id="main">
-			<a href = "https://claudiusma.notion.site/Plzdontwaitlistme-b4a8756bc0a44dec858178bbe77b09ce">Link</a>
 			<div class="project">
-				<img src="imgs/meet.png">
+				<a href = "https://claudiusma.notion.site/Plzdontwaitlistme-b4a8756bc0a44dec858178bbe77b09ce"></a><img src="imgs/meet.png"></a>
 			</div>
 			
 		</main>
