--- a/class.html
+++ b/class.html
@@ -95,7 +95,7 @@
 		</header>
 		<main id="main">
 			<div class="project">
-				<a href = "https://claudiusma.notion.site/Plzdontwaitlistme-b4a8756bc0a44dec858178bbe77b09ce"></a><img src="imgs/meet.png"></a>
+				<a href = "https://claudiusma.notion.site/Plzdontwaitlistme-b4a8756bc0a44dec858178bbe77b09ce"><img src="imgs/meet.png"></a>
 			</div>
 			
 		</main>
