--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<meta name="author" content="Chuxuan Claudius Ma">
-		<meta name="description" content="A Design Portfolio that records Claudius' past work and also his passion on social change.">
+		<meta name="description" content="A Design Portfolio that records Claudius Ma' past work and also his passion on social change.">
 
 
 		<link rel="icon" href="imgs/favicon.ico">
