--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 				</a>
 			</div>
 			<div class="My_Intro">
-				<p>I'm Chuxuan(Claudius) Ma</p>
-				<p>a multidisciplinary designer.</p>
+				<p>Chuxuan(Claudius) Ma</p>
+				<p>a product builder, a problem solver</p>
 			</div>
 			<div class="nav">
 				<ul>
