--- a/TCL.html
+++ b/TCL.html
@@ -79,7 +79,7 @@
 			</div>
 			<div class="My_Intro">
 				<p>Chuxuan(Claudius) Ma</p>
-				<p>a product builder, a problem solver</p>
+				<p>A Product Builder</p>
 			</div>
 			<div class="nav">
 				<ul>
