--- a/class.html
+++ b/class.html
@@ -73,7 +73,7 @@
 			</div>
 			<div class="My_Intro">
 				<p>Chuxuan(Claudius) Ma</p>
-				<p>a product builder, a problem solver</p>
+				<p>A Product Builder</p>
 			</div>
 			<div class="nav">
 				<ul>
