--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
 				<h1>My Story</h1>
 				<div class="block">
 					<p>
-						I am obsessed with experimentation. My friends say I am always coming up with hypotheses-even about our daily lives and relationships. This serves me well as a product person, because I always come up with a question and find the solution through experimentation. 
+						Growing up in a family of a government official and a professor of public administration, I was instilled with the principle of contributing to the benefit of society. As an interdisciplinary designer, I made products that helped combat the prejudice of Chinese Designers.  redefining design, and finally, helping people make better choices in the era of information overload. 
 					</p>
 					<br>
 					<p>
-						The products I made are generally incubated in the process of testing hypotheses, and the answers to my question are presented by the work I made during the process of inquiry. In the past five years, I tested three hypotheses, and delivered four meaningful products which made a real impact in our community. Now, my focus is on Nudge, and I wish I can help people make better choices in their life. 
+						The axis showed different stages of me solving different problems for the community that I was in. You can click on it and check what I did. 
+
 					</p>
 				</div>
 
