--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
 				<h1>My Story</h1>
 				<div class="block">
 					<p>
-						Growing up in a family of a government official and a professor of public administration, I was instilled with the principle of contributing to the benefit of society. As an interdisciplinary designer, I made products that helped combat the prejudice of Chinese Designers.  redefining design, and finally, helping people make better choices in the era of information overload. 
+						Growing up in a family of a veteran and a professor of public administration, I was instilled with the principle of contributing to the benefit of society. As an interdisciplinary designer, I made products that helped combat the prejudice Chinese Designers can experience,  redefining design, and finally, helping people make better choices when inundated with information overload. 
 					</p>
 					<br>
 					<p>
-						The axis showed different stages of me solving different problems for the community that I was in. You can click on it and check what I did. 
+						The timeline below shows different stages of my creative development and problem solving abilities in various communities.. You can click on it to see what I was doing over time.
 
 					</p>
 				</div>
