--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					</p>
 					<br>
 					<p>
-						The timeline below shows different stages of my creative development and problem solving abilities in various communities.. You can click on it to see what I was doing over time.
+						The timeline below shows different stages of my creative development and problem solving abilities in various communities. You can click on it to see what I was doing over time.
 
 					</p>
 				</div>
@@ -125,25 +125,25 @@
 						<div class="h-items">
 							<div class="h-item y-h" style="left:3%; animation-delay:0.36s">
 								<div class="h-title" aria-label="Jewelry Design" data-balloon-pos="up">
-									Design is for culture.
+									Copy to China.
 								</div>
 								<div class="h-desc"></div>
 							</div>
 							<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
 								<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
-									Design is for today.
+									Chinese Symbols Are Chinese Design. 
 								</div>
 								<div class="h-desc"></div>
 							</div>
 							<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
 								<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
-									Design is integrate.
+									Designers Are Drawing Monkeys.
 								</div>
 								<div class="h-desc"></div>
 							</div>
 							<div class="h-item y-l" style="left:48%; animation-delay:0.36s">
 								<div class="h-title" aria-label="Currently Working On" data-balloon-pos="up">
-									Design is nudge.
+									Technology Prevailed Our Weackness
 								</div>
 								<div class="h-desc"></div>
 							</div>
