--- a/index.html
+++ b/index.html
@@ -90,13 +90,14 @@
 					<li class="nav_label">About Me</li>
 					<li class="side_link"><a  class="current" href = "index.html">故事&nbsp;My Story</a></li>
 					<li class="side_link"><a  href = "https://drive.google.com/file/d/1veNnVqVt3HrEFYd2PzuqOABomneRCr2h/view?usp=sharing" target="_blank">简历&nbsp; Resume <i class="material-icons">launch</i></a></li>
-					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" >领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://www.linkedin.com/in/chuxuan-claudius-ma-875a43178/" target="_blank">领英&nbsp; LinkedIn <i class="material-icons">launch</i></a></li>
 
 					<li class="nav_label">My Product</li>
-					<li class="side_link"><a  href = "CU.html" aria-label="UX Design" data-balloon-pos="down-right">Airport Pickup Service</a></li>
+					<li class="side_link"><a  href = "https://claudiusma.notion.site/Airport-Pick-up-Service-d01c1f9532ee4a6ab0f16b8ca2b83923" target="_blank">Airport Pickup Service <i class="material-icons">launch</i></a></li>
+					<li class="side_link"><a  href = "https://claudiusma.notion.site/Plzdontwaitlistme-b4a8756bc0a44dec858178bbe77b09ce" target="_blank"> Plizdontwaitlistme <i class="material-icons">launch</i></a></li>
 					<li class="side_link"><a  href = "class.html" aria-label="UX Design" data-balloon-pos="down-right">Class Search</a></li>
 
-					<li class="nav_label">Internship</li>
+					<li class="nav_label">Internship(Confidential)</li>
 					<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
 					<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
 					<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
@@ -131,13 +132,13 @@
 							</div>
 							<div class="h-item y-l" style="left:18%; animation-delay:0.36s">
 								<div class="h-title" aria-label="SmartTV Design" data-balloon-pos="up">
-									Chinese Symbols Are Chinese Design. 
+									Chinese Symbols Are Chinese Design.
 								</div>
 								<div class="h-desc"></div>
 							</div>
 							<div class="h-item y-h" style="left:33%; animation-delay:0.36s">
 								<div class="h-title" aria-label="Pick-up Service" data-balloon-pos="up">
-									Designers Are Drawing Monkeys.
+									Designers Are Drawing-Monkeys.
 								</div>
 								<div class="h-desc"></div>
 							</div>
