--- a/Jewelry.html
+++ b/Jewelry.html
@@ -94,7 +94,7 @@
 					<li class="side_link"><a  href = "https://claudiusma.notion.site/Plzdontwaitlistme-b4a8756bc0a44dec858178bbe77b09ce" target="_blank"> Plizdontwaitlistme <i class="material-icons">launch</i></a></li>
 					<li class="side_link"><a  href = "class.html" aria-label="UX Design" data-balloon-pos="down-right">Class Search</a></li>
 
-					<li class="nav_label">Internship(Confidential)</li>
+					<li class="nav_label">Internship(confidential)</li>
 					<li class="side_link"><a  href = "TCL.html" aria-label="Industrial Design" data-balloon-pos="down-right">TCL Smart TV</a></li>
 					<li class="side_link"><a  href = "Badge.html" aria-label="Product Design" data-balloon-pos="down-right">Winter Olympic Badge</a></li>
 					<li class="side_link"><a  href = "Jewelry.html" aria-label="Jewelry Design" data-balloon-pos="down-right">Chow Tai Fook Jewelry</a></li>
